cmake_minimum_required(VERSION 3.16)

SET(CMAKE_CXX_STANDARD 20)

SET(BEASTADDONS_PROJECT_NAME BeastAddons)
SET(BEASTADDONS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(BEASTADDONS_LIBRARY ${BEASTADDONS_PROJECT_NAME})
SET(BEASTADDONS_INCLUDE_DIR ${BEASTADDONS_SOURCE_DIR}/include)

PROJECT(${BEASTADDONS_PROJECT_NAME})

FIND_PACKAGE(Boost 1.72 COMPONENTS system)
FIND_PACKAGE(Threads)

IF (NOT OPENSSL_SSL_LIBRARY)
    if (APPLE)
        set(OPENSSL_ROOT_DIR ${OPENSSL_ROOT_DIR} /usr/local/Cellar/openssl@1.1/1.1.1g/)
        set(OPENSSL_CRYPTO_LIBRARY ${OPENSSL_ROOT_DIR}/lib/libcrypto.dylib CACHE FILEPATH "" FORCE)
        set(OPENSSL_SSL_LIBRARY ${OPENSSL_ROOT_DIR}/lib/libssl.dylib CACHE FILEPATH "" FORCE)
    endif()
    find_package(OpenSSL)
ENDIF()

ADD_LIBRARY(${BEASTADDONS_LIBRARY} INTERFACE)

TARGET_LINK_LIBRARIES(${BEASTADDONS_LIBRARY} INTERFACE ${Boost_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(${BEASTADDONS_LIBRARY} INTERFACE ${Boost_INCLUDE_DIR} ${BEASTADDONS_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})

ADD_SUBDIRECTORY(test)