cmake_minimum_required(VERSION 3.16)

SET(CMAKE_CXX_STANDARD 20)

SET(BEASTADDONS_PROJECT_NAME BeastAddons)
SET(BEASTADDONS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(BEASTADDONS_LIBRARY ${BEASTADDONS_PROJECT_NAME})
SET(BEASTADDONS_INCLUDE_DIR ${BEASTADDONS_SOURCE_DIR}/include)

PROJECT(${BEASTADDONS_PROJECT_NAME})

ADD_SUBDIRECTORY(src)

ADD_SUBDIRECTORY(test)