FIND_PACKAGE(Boost 1.72 COMPONENTS system)
FIND_PACKAGE(Threads)

IF (NOT OPENSSL_SSL_LIBRARY)
    if (APPLE)
        set(OPENSSL_ROOT_DIR ${OPENSSL_ROOT_DIR} /usr/local/Cellar/openssl@1.1/1.1.1g/)
        set(OPENSSL_CRYPTO_LIBRARY ${OPENSSL_ROOT_DIR}/lib/libcrypto.dylib CACHE FILEPATH "" FORCE)
        set(OPENSSL_SSL_LIBRARY ${OPENSSL_ROOT_DIR}/lib/libssl.dylib CACHE FILEPATH "" FORCE)
    endif()
    find_package(OpenSSL)
ENDIF()

ADD_LIBRARY(${BEASTADDONS_LIBRARY} STATIC https_request.cpp)

TARGET_LINK_LIBRARIES(${BEASTADDONS_LIBRARY} PUBLIC ${Boost_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(${BEASTADDONS_LIBRARY} PUBLIC ${Boost_INCLUDE_DIR} ${BEASTADDONS_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})