find_library(GTEST_LIB gtest)
find_library(GTEST_MAIN_LIB gtest_main)
IF (NOT GTEST_LIB OR NOT GTEST_MAIN_LIB)
    ADD_SUBDIRECTORY(googletest)
ENDIF()

ADD_EXECUTABLE(BEASTADDONSTESTS main.cpp)

TARGET_LINK_LIBRARIES(BEASTADDONSTESTS PRIVATE gtest gtest_main ${BEASTADDONS_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(BEASTADDONSTESTS PRIVATE ${BEASTADDONS_INCLUDE_DIR})